src/core/core/_core.scss
// Reset fonts for relevant elements
input,
button,
select,
textarea {
  font-size: inherit;
  line-height: inherit;
}

// Only display content to screen readers
//
// See: http://a11yproject.com/posts/how-to-hide-content/

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0,0,0,0);
  border: 0;
}

// Use in conjunction with .sr-only to only display content when it's focused.
// Useful for "Skip to main content" links; see http://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
// Credit: HTML5 Boilerplate

.sr-only-focusable {
  &:active,
  &:focus {
	position: static;
	width: auto;
	height: auto;
	margin: 0;
	overflow: visible;
	clip: auto;
  }
}


// Body reset
html {
	font-size: 1em;
	-webkit-tap-highlight-color: rgba(0,0,0,0);
}

body {
	font-weight: $font-roman;
	font-family: $font-family-base;
	font-size: $font-size-main;
	color: $text-color;
}


// Links
a {
  color: $link-color;
  text-decoration: none;

  &:hover,
  &:focus {
	color: $link-hover-color;
	text-decoration: $link-hover-decoration;
  }

  &:focus {
	// @include tab-focus;
  }
}

//set a nice box model
* {
	box-sizing: border-box;
}

*:before,
*:after {
  box-sizing: border-box;
}

//Remove outline for focus state of all elements
*:focus {
	outline: none;
}

button {
	cursor: pointer;
	appearance: none;
	-webkit-appearance: none;
	background: none;
	border: 0;
}

.hidden {
  display: none;
}

.list-unstyled {
	list-style: none;
	padding: 0;
	margin: 0
}

.disabled, [disabled] {
	cursor: no-drop;
	color: color("gray", 20);
}

.valign-wrapper {
	display: table;
	width: 100%;
	height: 100%;
	> .valign-element {
		display: table-cell;
		vertical-align: middle;
		height: 100%;
		width: 100%;
		text-align: center;
	}
}

.valign-element {
	> * {
		margin: 0 auto;
		text-align: inherit
	}
}

 .badge {
	height: 18px;
	min-width: 18px;
	padding: 0 5px;
	border-radius: 18px;
	border: 1px solid color("white", 0);
	background-color: color("blue", 50);
	color: color("white", 0);
	text-align: center;
	font-size: rem(12);
	line-height: 1rem;
}

strong {
	font-weight: 700;
}


.fr {
	float: right;
}
.fl {
	float: left;
}

// set svg icon fill
.icon {
	fill: color("gray", 50);
	vertical-align: middle;
}

html[dir=rtl], body[dir=rtl] {
	.fr {
		float: left;
	}
	.fl {
		float: right;
	}
}

